# TAP

./: .dockerignore  .gitignore  Anchor.toml  Dockerfile  LICENSE  README.md  TAP_Whitepaper.txt  claude.md  package.json  render.yaml  skills-lock.json
.claude/: settings.json
demo/: README.md  consumer.py  dashboard.py  producer.py  runner.py
demo/frontend/: .env.example  README.md  index.html  vite.config.ts
deploy/: Caddyfile.example  env.example
deploy/systemd/: tap-producer.service  tap-runner.service
docs/: README.md  docusaurus.config.ts  package.json  sidebars.ts
docs/docs/: architecture.md  intro.md  whitepaper.md
programs/tap/: Cargo.toml
programs/tap/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/tap/src/instructions/: close.rs  dispute.rs  mod.rs  open_channel.rs  settle.rs
programs/tap/src/state/: channel.rs  commitment.rs  mod.rs
sdk/python/: README.md  pyproject.toml
sdk/python/tap/: __init__.py  exceptions.py  tokenizer.py
sdk/python/tap/adapters/: __init__.py  anthropic.py  gemini.py  ollama.py  openai.py
sdk/python/tap/chain/: __init__.py  channel_account.py  discriminator.py  ed25519_ix.py  instructions.py  keypair_io.py  pda.py  program_id.py  rpc.py
sdk/python/tap/consumer/: __init__.py  batching.py  client.py  discovery.py  halt.py  opener.py  policy.py  session.py  session_key.py  stream.py
sdk/python/tap/evaluators/: __init__.py  base.py  compose.py  content_policy.py  json_schema.py  length_cap.py  repetition.py  topic_drift.py
sdk/python/tap/producer/: __init__.py  channel.py  halt.py  handler_types.py  pricing.py  registry.py  server.py  settle.py  settler.py  settler_cli.py  sse.py  verifier.py  wrap_stream.py
sdk/python/tap/protocol/: __init__.py  codec.py  commit.py  prompt.py  signing.py
sdk/python/tap/timing/: __init__.py  parameters.py
sdk/python/tap/x402/: __init__.py  headers.py  payment.py  requirements.py  response.py
sdk/python/tests/: test_codec_parity.py  test_evaluators.py  test_pda_parity.py  test_tokenizer.py  test_x402_codecs.py
sdk/typescript/: .gitignore  (+4 more)
tests/: tap.ts
(+80 files in other folders)
